--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,37 @@ spring.datasource.password=Localhost
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = none
 
-#热部署生效
-spring.devtools.restart.enabled: true
-#设置重启的目录
-#spring.devtools.restart.additional-paths: src/main/java
-#classpath目录下的WEB-INF文件夹内容修改不重启
-spring.devtools.restart.exclude: WEB-INF/**
+# 邮箱配置
+spring.mail.host=smtp.qq.com
+spring.mail.port=587
+spring.mail.username=2439175930@qq.com
+spring.mail.password=dlxhwsmdlgsmeacg
+spring.mail.from=2439175930@qq.com
+
+# redis
+# Redis数据库索引（默认为0）
+spring.redis.database=0 
+# Redis服务器地址
+spring.redis.host=localhost
+# Redis服务器连接端口
+spring.redis.port=6379 
+# Redis服务器连接密码（默认为空）
+spring.redis.password=
+#连接池最大连接数（使用负值表示没有限制）
+spring.redis.jedis.pool.max-idle=8 
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.jedis.pool.max-wait=-1
+# 连接池中的最小空闲连接
+spring.redis.jedis.pool.min-idle=0 
+# 连接超时时间（毫秒）
+spring.redis.timeout=300
+
+##jwt配置
+# 代表这个JWT的接收对象,存入audience
+audience.clientId=098f6bcd4621d373cade4e832627b4f6
+# 密钥, 经过Base64加密, 可自行替换
+audience.base64Secret=MDk4ZjZiY2Q0NjIxZDM3M2NhZGU0ZTgzMjYyN2I0ZjY=
+# JWT的签发主体，存入issuer
+audience.name=restapiuser
+# 过期时间，时间戳
+audience.expiresSecond=172800
